# events

./: pyproject.toml
src/: frontend.py  load_events.py  paths.py
src/data/raw/: events_dj_list_08_04_2025_2118.json  events_lan_list_08_04_2025_2118.json
src/scripts/frontend/: get_events.py
src/scripts/ingestion/: load_events.py
