[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Resh <noneed@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"
requests = "^2.32.3"
bs4 = "^0.0.2"
streamlit = "^1.44.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

events = { from = "src" }
